--- a/portfolio.css
+++ b/portfolio.css
@@ -518,7 +518,7 @@ footer{
     letter-spacing: 2.5px;
     text-shadow: 2px 2px 5px var(--first-shadow-color);
     font-weight: 700;
-    text-decoration: line-through;
+    text-decoration:underline;
 }
 /* ----- MEDIA QUERY == 1024px / RESPONSIVE ----- */
 @media only screen and (max-width: 1024px){
