--- a/portfolio.css
+++ b/portfolio.css
@@ -408,7 +408,13 @@ h3{
 }
 .contact-info>h2{
     color: var(--color-white);
-    margin-bottom: 20px;
+  font-size: 1.8rem; /* Adjust font size for responsiveness */
+  padding: 0 2rem;
+  position: relative;
+  
+  font-weight: 50;
+  font-style: normal;
+  font-size: 40px;
 }
 .contact-info>p{
     display: flex;
@@ -430,12 +436,15 @@ h3{
     z-index: 2;
 }
 /* ----- CONTACT FORM ----- */
-.form-control{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 100%;
+.form-control::before{
+    top: 10%;
+    left: -2.8rem;
+     content: "";
+     width: 0;
+     height: 0;
+     border: 1.4rem solid transparent;
 }
+
 .form-inputs{
     display: flex;
     gap: 10px;
@@ -454,11 +463,10 @@ textarea{
     width: 100%;
     height: 250px;
     background: transparent;
-    border: 2px solid #AAA;
+    box-sizing: border-box;
+    box-shadow: 1px 8px 10px 2px var(--first-shadow-color);
+    border: 10px solid #7b797e;
     border-radius: 10px;
-    padding: 15px 20px;
-    outline: none;
-    resize: none;
 }
 .form-button>.btn{
     display: flex;
@@ -469,6 +477,7 @@ textarea{
 }
 .form-button>.btn:hover{
     background: #00B5E7;
+    color: var(--color-white);
 }
 .form-button i{
     font-size: 18px;
