--- a/portfolio.css
+++ b/portfolio.css
@@ -436,15 +436,12 @@ h3{
     z-index: 2;
 }
 /* ----- CONTACT FORM ----- */
-.form-control::before{
-    top: 10%;
-    left: -2.8rem;
-     content: "";
-     width: 0;
-     height: 0;
-     border: 1.4rem solid transparent;
+.form-control{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
 }
-
 .form-inputs{
     display: flex;
     gap: 10px;
@@ -463,10 +460,11 @@ textarea{
     width: 100%;
     height: 250px;
     background: transparent;
-    box-sizing: border-box;
-    box-shadow: 1px 8px 10px 2px var(--first-shadow-color);
-    border: 10px solid #7b797e;
+    border: 2px solid #AAA;
     border-radius: 10px;
+    padding: 15px 20px;
+    outline: none;
+    resize: none;
 }
 .form-button>.btn{
     display: flex;
@@ -477,7 +475,6 @@ textarea{
 }
 .form-button>.btn:hover{
     background: #00B5E7;
-    color: var(--color-white);
 }
 .form-button i{
     font-size: 18px;
