--- a/portfolio.css
+++ b/portfolio.css
@@ -349,6 +349,13 @@ h3{
     gap: 20px;
     flex-wrap: wrap;
 }
+.section{
+    padding: 20px;
+}
+.top-header {
+    text-align: center;
+    margin-bottom: 20px;
+}
 .project-box{
     position: relative;
     display: flex;
@@ -357,8 +364,11 @@ h3{
     flex-direction: column;
     width: 30%;
     height: 250px;
+    border: 1px solid #ddd;
     background: var(--color-white);
     border-radius: 20px;
+    cursor: pointer;
+    transition: transform 0.3s boxshadow 0.3s;
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
      overflow: hidden;
 }
@@ -384,6 +394,11 @@ h3{
 .project-box:hover.project-box::after,
 .contact-info:hover.contact-info::after{
     bottom: 0;
+}
+.project-box:hover{
+    font-size: 50px;
+    margin-bottom: 10px;
+    color: #333;
 }
 .project-box:hover.project-box i,
 .project-box:hover.project-box>h3,
@@ -436,51 +451,6 @@ h3{
     z-index: 2;
 }
 /* ----- CONTACT FORM ----- */
-/* .form-control{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    width: 100%;
-}
-.form-inputs{
-    display: flex;
-    gap: 10px;
-    width: 100%;
-}
-.input-field{
-    width: 50%;
-    height: 55px;
-    background: transparent;
-    border: 2px solid #AAA;
-    border-radius: 10px;
-    padding-inline: 20px;
-    outline: none;
-}
-textarea{
-    width: 100%;
-    height: 250px;
-    background: transparent;
-    border: 2px solid #AAA;
-    border-radius: 10px;
-    padding: 15px 20px;
-    outline: none;
-    resize: none;
-}
-.form-button>.btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: var(--second-color);
-    color: var(--color-white);
-}
-.form-button>.btn:hover{
-    background: #00B5E7;
-}
-.form-button i{
-    font-size: 18px;
-    rotate: -45deg;
-} */
-
 .mycontact {
     max-width: 400px;
     margin: 0 auto;
@@ -488,11 +458,9 @@ textarea{
     background-color: #f9f9f9;
     border-radius: 8px;
 }
-
 label {
     font-weight: bold;
 }
-
 input, textarea {
     width: 100%;
     padding: 10px;
@@ -500,7 +468,6 @@ input, textarea {
     border: 1px solid #ccc;
     border-radius: 4px;
 }
-
 button {
     background-color: #007bff;
     color: #fff;
@@ -509,10 +476,6 @@ button {
     border-radius: 4px;
     cursor: pointer;
 }
-
-
-
-
 /* contact form end */
 /* ----- FOOTER BOX ----- */
 footer{
